--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "openai-chatbot",
   "version": "1.0.0",
   "description": "chatbot powered by openai api",
+  "type": "module",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Darshil",
@@ -11,7 +13,7 @@
   "dependencies": {
     "colors": "^1.4.0",
     "dotenv": "^16.3.1",
-    "openai": "^4.18.0",
+    "openai": "^3.3.0",
     "readline-sync": "^1.4.10"
   }
 }
